Bug 567295. d2d: Support antialiased clipping. r=bas

This switches from using CombineGeometry() to accumulate
clip paths to using a stack of Layers each with a
geometric mask. This avoids any imprecision that occurs
when using CombineGeometry().

There maybe some performance regressions but we need the
correctness and may be able to get some of the performance
back.